# dnd-inventory-manager

./: .dockerignore  .env.docker  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  docker-compose.yml
.gemini/: config.yaml  styleguide.md
.github/workflows/: ci.yml  docker-publish.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py
backend/app/core/: __init__.py  auth.py  sse.py
backend/app/data/: armor.json  gear.json  potions.json  srd_index.json  weapons.json
backend/app/db/: __init__.py  history.py  inventory.py  item.py  openai_connection.py
backend/app/models/: __init__.py  currency.py  history.py  inventory.py  item.py  openai.py  srd.py
backend/app/routers/: __init__.py  currency.py  events.py  history.py  inventories.py  items.py  openai.py  srd.py
backend/app/services/: __init__.py  currency.py  history.py  srd.py  thumbnails.py
backend/tests/: __init__.py  conftest.py  test_currency.py  test_health.py  test_history.py  test_inventories.py  test_items.py  test_srd.py  test_sse.py
data/: dnd_inventory.db-shm  dnd_inventory.db-wal
docs/: TAILNET_ACCESS.md
frontend/: .dockerignore  Dockerfile  codegen.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: dev-ports.sh  dev-setup.sh  dev.sh  prod-down.sh  prod-logs.sh  prod-up.sh  ralph.sh
scripts/ralph-backend/: CLAUDE.md  prd.json
tasks/: prd-inventory-manager.md
(+99 files in other folders)
